--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,28 @@ a.cta-button:nth-child(1) {
   object-fit: contain;
 }
 
+/* Card section */
+
+.card {
+  width: 190px;
+  height: 254px;
+  border-radius: 20px;
+  background: #f5f5f5;
+  position: relative;
+  padding: 1.8rem;
+  border: 2px solid #c3c6ce;
+  transition: 0.5s ease-out;
+  overflow: visible;
+}
+
+.card-details {
+  color: black;
+  height: 100%;
+  gap: 0.5em;
+  display: grid;
+  place-content: center;
+}
+
 /* Section 3 (Accordion Section) */
 .section-3 {
   background-color: var(--color-white);
