--- a/styles.css
+++ b/styles.css
@@ -206,25 +206,68 @@ a.cta-button:nth-child(1) {
 }
 
 /* Card section */
+.cards {
+  gap: 2rem;
+  padding-block: 5rem;
+}
 
 .card {
-  width: 190px;
-  height: 254px;
+  width: 249px;
+  height: 298px;
   border-radius: 20px;
-  background: #f5f5f5;
+  background: var(--color-white);
   position: relative;
   padding: 1.8rem;
-  border: 2px solid #c3c6ce;
+  border: 2px solid #1818183f;
   transition: 0.5s ease-out;
   overflow: visible;
 }
 
 .card-details {
-  color: black;
+  color: var(--color-black);
   height: 100%;
   gap: 0.5em;
   display: grid;
   place-content: center;
+  line-height: 1.5rem;
+}
+
+.card-button {
+  transform: translate(-50%, 125%);
+  width: 60%;
+  border-radius: 1rem;
+  border: none;
+  background-color: var(--color-blue);
+  color: #fff;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  opacity: 0;
+  transition: 0.3s ease-out;
+  cursor: pointer;
+}
+
+.text-body {
+  color: rgb(134, 134, 134);
+}
+
+/*Text*/
+.text-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+/*Hover*/
+.card:hover {
+  border-color: var(--color-blue);
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.card:hover .card-button {
+  transform: translate(-50%, 50%);
+  opacity: 1;
 }
 
 /* Section 3 (Accordion Section) */
@@ -480,6 +523,13 @@ footer {
   }
   .section-2 .text-block {
     width: 50%;
+  }
+
+  .cards {
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    padding-block: 5rem;
   }
 
   /* accordion desktop*/
