--- a/styles.css
+++ b/styles.css
@@ -205,12 +205,22 @@ a.cta-button:nth-child(1) {
 }
 
 /* Card section */
+
 .cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  padding-block: 5rem;
+  flex-direction: row;
+  gap: 4rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cards h2 {
+  flex-basis: 100%;
+  text-align: center;
+  margin-bottom: 2rem;
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2rem;
 }
 
 .card {
@@ -223,12 +233,6 @@ a.cta-button:nth-child(1) {
   border: 2px solid #1818183f;
   transition: 0.5s ease-out;
   overflow: visible;
-}
-
-.cards h2 {
-  text-align: center;
-  width: 100%;
-  margin-bottom: 2rem;
 }
 
 .card-details {
