--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ body {
   background-color: var(--color-light-creme);
 }
 
+img {
+  max-width: 100%;
+  object-fit: contain;
+}
 
 /* HEADER */
 header {
